// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetches with aliases 1`] = `
Object {
  "author": Object {
    "description": "Cumque ipsam exercitationem sequi est minus.",
    "headline": "Reese Dickinson",
    "id": "Mi1BdXRob3I=",
  },
  "something": Object {
    "description": "Laudantium molestias ut.",
    "externalId": "MS1Cb29r",
    "headline": "Veniam",
    "id": "MS1Cb29r",
  },
  "user": Object {
    "description": "Pariatur laboriosam aliquid velit molestiae voluptates exercitationem reiciendis.",
    "headline": "Ruthie Brown",
    "id": "MS1Vc2Vy",
  },
}
`;

exports[`fetching anything fetches Author 1`] = `
Object {
  "__typename": "Author",
  "books": Array [
    Object {
      "description": "Tenetur voluptatem nostrum qui.",
      "favourite": false,
      "id": "My1Cb29r",
      "title": "Assumenda",
    },
    Object {
      "description": "Ipsam exercitationem sequi est minus consequatur minus fugit.",
      "favourite": false,
      "id": "Mi1Cb29r",
      "title": "Maxime Qui Adipisci Qui",
    },
    Object {
      "description": "Laudantium molestias ut.",
      "favourite": false,
      "id": "MS1Cb29r",
      "title": "Veniam",
    },
  ],
  "id": "MS1BdXRob3I=",
  "name": "Rosalind Effertz",
}
`;

exports[`fetching anything fetches Book 1`] = `
Object {
  "__typename": "Book",
  "description": "Laudantium molestias ut.",
  "favourite": false,
  "id": "MS1Cb29r",
  "title": "Veniam",
}
`;

exports[`fetching anything fetches BookCopy 1`] = `
Object {
  "__typename": "BookCopy",
  "book": Object {
    "description": "Vero aut assumenda.",
    "favourite": false,
    "id": "MS1Cb29r",
    "title": "Minus",
  },
  "borrower": Object {
    "email": "Braulio_Rempel33@hotmail.com",
    "id": "MS1Vc2Vy",
    "name": "Rosalind Effertz",
  },
  "id": "MS1Cb29rQ29weQ==",
  "owner": Object {
    "email": "Eusebio92@hotmail.com",
    "id": "Mi1Vc2Vy",
    "name": "Eileen Reinger",
  },
}
`;

exports[`fetching anything fetches User 1`] = `
Object {
  "__typename": "User",
  "email": "Braulio_Rempel33@hotmail.com",
  "id": "MS1Vc2Vy",
  "name": "Rosalind Effertz",
}
`;
